--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,6 +1,15 @@
 Release Notes for django-anyvcs
 ===============================
 
+2.2.0 (2013-01-22)
+------------------
+
+* Deprecate setup.py in favor of django-anyvcs-ssh
+* Deprecate VCS_URI_{FORMAT,CONTEXT} in favor of VCSREPO_URI_{FORMAT,CONTEXT}
+* Fix issue where Subversion bynames could not be in a directory hierarchy.
+* Add new settings VCSREPO_{GROUP,USER}_ACL_FUNCTION which allow backwards
+  lookup of rights. This fixes issues generating the authz for Subversion.
+
 2.1.0 (2013-10-08)
 ------------------
 
